Implemented all of the code problem suggestions